--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ProjectApp</string>
+    <string name="state_fine_msg">Press a button to ask for help</string>
+    <string name="state_emergency_msg">Request sent, help is on the way</string>
+    <string name="state_patient_observed_msg">Glad that we could help!</string>
+    <string name="user_authentication_error">User not registered, please register</string>
 </resources>
